[package]
name = "day_04"
version = "0.1.0"
edition = "2021"
authors = ["Dennis Pettersson <mail@dennispettersson.se>"]

[lib]
doctest = false

[[bin]]
name = "day_04"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
