[package]
name = "day_07"
version = "0.1.0"
edition = "2018"
authors = ["Dennis Pettersson <mail@dennispettersson.se>"]

[lib]
doctest = false

[[bin]]
name = "day_07"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
