[package]
name = "day_10"
version = "0.1.0"
authors = ["Dennis Pettersson <mail@dennispettersson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.6.0"

[[bin]]
name = "day_10"
path = "src/bin/main.rs"
