[package]
name = "day_15"
version = "0.1.0"
authors = ["Dennis Pettersson <mail@dennispettersson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_09 = { path = "../day_09" }
termion = "1.5.4"
float-cmp = "0.6.0"
rand = "0.7.2"
